# DatabricksEvaluation

./: .databricksignore  .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  DEPLOY_NOW.md  OBO_VALIDATION_REPORT.md  README.md  app.yaml  app.yml  databricks.yml  databricks_app.yaml  mlflow_wrapper.py  pyproject.toml  requirements.txt  secret_acls.tf
.github/workflows/: deploy.yml
agents/: __init__.py  multi_agent.py  tools.py
evaluation/: __init__.py  evaluate.py
governance/logs/: audit.jsonl
notebooks/: 01_setup_and_deploy.py  02_evaluate.py
project/: __init__.py  api.py  app_streamlit.py  main.py
project/agentbricks/: __init__.py  deployment.py  evaluator.py  governance.py  runtime.py
project/agents/: __init__.py  databricks_add_agent.py  graph.py  job_log_agent.py  supervisor.py  unity_catalog_agent.py
project/configs/: __init__.py  prompts.py
project/data/: evaluation_results.json  sample_dataset.json
project/evaluation/: __init__.py  dataset.py  evaluator.py  metrics.py
project/governance/: __init__.py  audit.py  pii.py  policy.py  safety.py
project/orchestration/: __init__.py  orchestrator.py
project/templates/: index.html
project/utils/: __init__.py  databricks_llm.py  llm_client.py  logger.py
scripts/: verify_obo.sh
tests/: test_agents.py
