[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "databricks-multi-agent-mlflow"
version = "0.1.0"
description = "Production-ready Databricks multi-agent system with MLflow evaluation"
requires-python = ">=3.10"
dependencies = [
  "python-dotenv>=1.0.1",
  "openai>=1.52.0,<2.0.0",
  "mlflow>=2.14.0"
]

[tool.setuptools.packages.find]
include = ["project*"]

[project.scripts]
multi-agent-main = "project.main:main"
